# signal-viewer

./: .gitignore  README.md  TODO  TODO.md  compile_doc.ps1  main.py  pyproject.toml  pysidedeploy.spec  rc_resources.py  resources.qrc  signal-editor.pyproject  signal-viewer.code-workspace  signal-viewer.pyproject  signal-viewer.spec
signal_editor/: sv_gui.py
signal_viewer/: __main__.py  constants.py  enum_defs.py  rc_resources.py  resources.qrc  start.py  sv_app.py  sv_config.py  sv_gui.py  sv_help.py  sv_site.py  type_defs.py  utils.py
signal_viewer/doc/: about.txt  about_help.html  dock_windows.html  getting_started.html  index.html  loading_data.html  log_window.html  main_window.html  page_input.html  page_results.html  peak_detection.html  results.html  section_list.html  settings.html  signalviewer.qch  signalviewer.qhc  signalviewer.qhcp  signalviewer.qhp  stylesheet.css  ui_components.html
signal_viewer/doc/ui_components/: dialog_windows.html  file_metadata.html  main_window.html  page_view_edit.html  parameter_inputs.html  section_list.html
signal_viewer/doc/user_guide/: getting_started.html  peak_detection.html  preprocessing.html  sections.html
signal_viewer/help_browser/: help_controller.py  help_gui.py
signal_viewer/sv_data/: data_controller.py  data_models.py  file_io.py  peak_detection.py  section.py  signal_processing.py
signal_viewer/sv_logic/: data_controller.py  data_models.py  file_io.py  peak_detection.py  section.py  signal_processing.py
signal_viewer/sv_plots/: graphic_items.py  plot_controller.py
signal_viewer/sv_widgets/: dlg_metadata.py  dock_log_window.py  dock_param_inputs.py  dock_parameter_inputs.py  dock_sections.py
